libreoffice (1:7.0.0~rc1~git20200627-1) UNRELEASED; urgency=medium

  * New upstream snapshot 

  * debian/rules:
    - remove unused/-needed CLANG= setting and export CLANG_CC/CLANG_CXX
      instead if needed (don't set it for default clang version)
    - fix adding cjk ctl and ctlseqcheck configs to the langpacks
  * debian/tests/control:
    - fix uicheck-cui: needs -writer now, too 
  * debian/control.librelogo.in:
    - s/progamming/programming/ (closes: #963753)

 -- Rene Engelhard <rene@debian.org>  Wed, 24 Jun 2020 23:09:40 +0200

libreoffice (1:7.0.0~beta2-2) experimental; urgency=medium

  * debian/patches/apparmor-cleanups.diff: #include <abstractions/user-tmp>
    (closes: #962903)

  * debian/rules:
    - re-enable CoinMP

 -- Rene Engelhard <rene@debian.org>  Sun, 21 Jun 2020 13:24:03 +0200

libreoffice (1:7.0.0~beta2-1) experimental; urgency=medium

  * New upstream beta release
    - fixes signing existing PDFs (closes: #955272)
    - sets A4 in extras/source/shellnew templates (closes: #961473)

  * debian/rules:
    - revert add conditional and build-dep for new box2d, not used in 7.0
    - use default libboost*-dev (>= 1.71) in gcc 10 case now that we have
      a matching default boost

 -- Rene Engelhard <rene@debian.org>  Thu, 18 Jun 2020 21:43:26 +0200

libreoffice (1:7.0.0~beta1-1) experimental; urgency=medium

  * New upstream beta release

  * debian/rules:
    - build l10n again
    - add conditional and build-dep for new box2d
    - bump build-dependency to Java 1.9 for module-info support
    - make liblibreoffice-java depend on libunoloader-java
  * debian/copyright: add dtoa.

  * merge from Ubuntu:
    - Don't use main.xcd configured with --disable-gui  

 -- Rene Engelhard <rene@debian.org>  Wed, 27 May 2020 22:24:38 +0200

libreoffice (1:7.0.0~alpha1-2) experimental; urgency=medium

  * debian/patches/libreoffice.jar-pom.diff: add pom for new
    libreoffice.jar
  * debian/patches/bigendian-ustrbuf-hxx.diff: add missing include