@@ -2,9 +2,9 @@ Tests: uno
 Depends: @builddeps@, ure
 Restrictions: allow-stderr, rw-build-tree
 
-Tests: smoketest
-Depends: @builddeps@, libreoffice-dev, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress-nogui, libreoffice-math, libreoffice-base-nogui, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird, libreoffice-smoketest-data
-Restrictions: allow-stderr, rw-build-tree, skippable
+#Tests: smoketest
+#Depends: @builddeps@, libreoffice-dev, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress-nogui, libreoffice-math, libreoffice-base-nogui, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird, libreoffice-smoketest-data
+#Restrictions: allow-stderr, rw-build-tree, skippable
 
 Tests: pyuno-import, uno-import
 Depends: python3, python3-uno
@@ -33,7 +33,7 @@ Depends: @builddeps@, libreoffice-core, libreoffice-impress, libreoffice-writer,
 Restrictions: allow-stderr
 
 Tests: uicheck-sc
-Depends: @builddeps@, libreoffice-core, libreoffice-calc, libreoffice-draw, python3-uno, libreoffice-l10n-he, libreoffice-l10n-ja
+Depends: @builddeps@, libreoffice-core, libreoffice-calc, libreoffice-draw, python3-uno, libreoffice-l10n-he, libreoffice-l10n-ja, libreoffice-java-common
 Restrictions: allow-stderr
 
 Tests: uicheck-sd
@@ -41,7 +41,7 @@ Depends: @builddeps@, libreoffice-core, libreoffice-draw, libreoffice-impress, p
 Restrictions: allow-stderr
 
 Tests: uicheck-sw
-Depends: @builddeps@, libreoffice-core, libreoffice-writer, libreoffice-base, python3-uno, libreoffice-l10n-he, libreoffice-l10n-ja, libreoffice-librelogo
+Depends: @builddeps@, libreoffice-core, libreoffice-writer, libreoffice-base, python3-uno, libreoffice-l10n-he, libreoffice-l10n-ja, libreoffice-librelogo, libreoffice-java-common
 Restrictions: allow-stderr
 
 Tests: uicheck-uitest
