@@ -48,25 +48,36 @@ index daa0f1835be7..c4186e900a87 100644
  	Package_registry \
  ))
  
+diff --git a/solenv/gbuild/JavaClassSet.mk b/solenv/gbuild/JavaClassSet.mk
+index cff4299bf06e..76765351abdd 100644
 --- a/solenv/gbuild/JavaClassSet.mk
 +++ b/solenv/gbuild/JavaClassSet.mk
-@@ -39,7 +39,7 @@ $(call gb_Helper_abbreviate_dirs,\
- 			$(filter-out $(JARDEPS),$(4))) && \
- 		$(if $(3),$(gb_JavaClassSet_JAVACCOMMAND) \
+@@ -46,7 +46,7 @@ $(call gb_Helper_abbreviate_dirs,\
+ 			$(filter-out $(JARDEPS) $(T_JAVA9FILES),$(4))) && \
+ 		$(if $(3),$(call gb_JavaClassSet_JAVACCOMMAND,$(JAVA_TARGET_VER)) \
  			$(gb_JavaClassSet_JAVACDEBUG) \
 -			-classpath "$(T_CP)$(gb_CLASSPATHSEP)$(call gb_JavaClassSet_get_classdir,$(2))" \
-+			-classpath "$(T_CP)$(gb_CLASSPATHSEP)$(call gb_JavaClassSet_get_classdir,$(2)):$(subst $(gb_SPACE),:,$(wildcard /usr/lib/ure/share/java/*.jar)):$(subst $(gb_SPACE),:,$(wildcard /usr/lib/libreoffice/program/classes/*.jar))" \
++			-classpath "$(T_CP)$(gb_CLASSPATHSEP)$(call gb_JavaClassSet_get_classdir,$(2))$(gb_CLASSPATHSEP)$(shell echo $(wildcard /usr/lib/libreoffice/program/classes/*.jar) | sed -e s/\ /:/g)" \
  			-d $(call gb_JavaClassSet_get_classdir,$(2)) \
  			@$$RESPONSEFILE &&) \
  		rm -f $$RESPONSEFILE &&) \
+@@ -55,7 +55,7 @@ $(call gb_Helper_abbreviate_dirs,\
+ 				$(T_JAVA9FILES)) && \
+ 			$(if $(3),$(call gb_JavaClassSet_JAVACCOMMAND,9) \
+ 				$(gb_JavaClassSet_JAVACDEBUG) \
+-				-classpath "$(T_CP)$(gb_CLASSPATHSEP)$(call gb_JavaClassSet_get_classdir,$(2))" \
++				-classpath "$(T_CP)$(gb_CLASSPATHSEP)$(call gb_JavaClassSet_get_classdir,$(2))$(gb_CLASSPATHSEP)$(shell echo $(wildcard /usr/lib/libreoffice/program/classes/*.jar) | sed -e s/\ /:/g)" \
+ 				--module-path "$(T_CP)$(gb_CLASSPATHSEP)$(call gb_JavaClassSet_get_classdir,$(2))" \
+ 				$(if $(T_MODULENAME),--patch-module $(T_MODULENAME)="$(subst $(WHITESPACE),$(gb_CLASSPATHSEP),$(strip $(dir $(PACKAGEDIRS))))") \
+ 				-d $(call gb_JavaClassSet_get_classdir,$(2)) \
 --- a/solenv/gbuild/JunitTest.mk
 +++ b/solenv/gbuild/JunitTest.mk
 @@ -55,7 +55,7 @@ $(call gb_JunitTest_get_target,%) :
- 	$(CLEAN_CMD)
+ endif
  
  define gb_JunitTest_JunitTest
 -$(call gb_JunitTest_get_target,$(1)) : T_CP := $(call gb_JavaClassSet_get_classdir,$(call gb_JunitTest_get_classsetname,$(1)))$$(gb_CLASSPATHSEP)$(OOO_JUNIT_JAR)$(if $(HAMCREST_JAR),$$(gb_CLASSPATHSEP)$(HAMCREST_JAR))$$(gb_CLASSPATHSEP)$(INSTROOT)/$(LIBO_URE_LIB_FOLDER)
-+$(call gb_JunitTest_get_target,$(1)) : T_CP := $(call gb_JavaClassSet_get_classdir,$(call gb_JunitTest_get_classsetname,$(1)))$$(gb_CLASSPATHSEP)$(OOO_JUNIT_JAR)$(if $(HAMCREST_JAR),$$(gb_CLASSPATHSEP)$(HAMCREST_JAR))$$(gb_CLASSPATHSEP)$(OUTDIR)/lib:$(subst $(gb_SPACE),:,$(wildcard /usr/lib/ure/share/java/*.jar)):$(subst $(gb_SPACE),:,$(wildcard /usr/lib/libreoffice/program/classes/*.jar))
++$(call gb_JunitTest_get_target,$(1)) : T_CP := $(call gb_JavaClassSet_get_classdir,$(call gb_JunitTest_get_classsetname,$(1)))$$(gb_CLASSPATHSEP)$(OOO_JUNIT_JAR)$(if $(HAMCREST_JAR),$$(gb_CLASSPATHSEP)$(HAMCREST_JAR))$$(gb_CLASSPATHSEP)$(INSTROOT)/$(LIBO_URE_LIB_FOLDER)$(gb_CLASSPATHSEP)$(shell echo $(wildcard /usr/lib/libreoffice/program/classes/*.jar) | sed -e s/\ /:/g)
  $(call gb_JunitTest_get_target,$(1)) : CLASSES :=
  $(eval $(call gb_JunitTest_JunitTest_platform,$(1)))
  
