@@ -3,7 +3,7 @@ index d090146ec411..1cb4d30dcc2a 100644
 --- a/testtools/CustomTarget_bridgetest.mk
 +++ b/testtools/CustomTarget_bridgetest.mk
 @@ -28,7 +28,7 @@ $(testtools_BRIDGEDIR)/bridgetest_server$(testtools_BATCHSUFFIX) :| $(testtools_
- 	$(call gb_Output_announce,$(subst $(WORKDIR)/,,$@),$(true),ECH,1)
+ 	$(call gb_Trace_StartRange,$(subst $(WORKDIR)/,,$@),ECH)
  	$(call gb_Helper_abbreviate_dirs,\
  		echo \
 -		"$(call gb_Executable_get_target_for_build,uno)" \
@@ -12,7 +12,7 @@ index d090146ec411..1cb4d30dcc2a 100644
  		"-u 'uno:socket$(COMMA)host=127.0.0.1$(COMMA)port=2002;urp;test'" \
  		"--singleaccept" \
 @@ -59,7 +59,7 @@ $(testtools_BRIDGEDIR)/bridgetest_inprocess_java$(testtools_BATCHSUFFIX) :| $(te
- 	$(call gb_Output_announce,$(subst $(WORKDIR)/,,$@),$(true),ECH,1)
+ 	$(call gb_Trace_StartRange,$(subst $(WORKDIR)/,,$@),ECH)
  	$(call gb_Helper_abbreviate_dirs,\
  		echo "JAVA_HOME=$(JAVA_HOME)" \
 -		"$(call gb_Executable_get_target_for_build,uno)" \
@@ -21,7 +21,7 @@ index d090146ec411..1cb4d30dcc2a 100644
  		"-env:LO_BUILD_LIB_DIR=$(call gb_Helper_make_url,$(gb_Library_WORKDIR_FOR_BUILD))" \
  		"-env:URE_MORE_SERVICES=$(call gb_Helper_make_url,$(call gb_Rdb_get_target,uno_services))" \
 @@ -72,7 +72,7 @@ $(testtools_BRIDGEDIR)/bridgetest_client$(testtools_BATCHSUFFIX) :| $(testtools_
- 	$(call gb_Output_announce,$(subst $(WORKDIR)/,,$@),$(true),ECH,1)
+ 	$(call gb_Trace_StartRange,$(subst $(WORKDIR)/,,$@),ECH)
  	$(call gb_Helper_abbreviate_dirs,\
  		echo \
 -		"$(call gb_Executable_get_target_for_build,uno)" \
