@@ -2,12 +2,22 @@ libreoffice (1:7.0.0~rc1~git20200627-1) UNRELEASED; urgency=medium
 
   * New upstream snapshot 
 
+  * debian/tests/patches/java-subsequentcheck-standalone.diff: unfuzzy.
+    use $(shell .. | sed) instead of $(subst ..) since the latter doesn't
+    work anymore...
+
   * debian/rules:
     - remove unused/-needed CLANG= setting and export CLANG_CC/CLANG_CXX
       instead if needed (don't set it for default clang version)
     - fix adding cjk ctl and ctlseqcheck configs to the langpacks
+
   * debian/tests/control:
     - fix uicheck-cui: needs -writer now, too 
+    - disable "smoketest" for now
+    - add libreoffice-java-common to uicheck-{sc,sw} for RunMacros dialog
+      test (apparently doesn't fail without but just prints an exception,
+      but...)
+
   * debian/control.librelogo.in:
     - s/progamming/programming/ (closes: #963753)
 
